[project]
name = "msc-thesis-causal-bandits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daft-pgm>=0.1.4",
    "dowhy>=0.14",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.5",
    "pgmpy>=1.0.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
